--- a/textpdf/templates/pdf_upload.html
+++ b/textpdf/templates/pdf_upload.html
@@ -96,7 +96,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark header">
-      <a href="#" style="margin-left: 525px;" class="bace_title">Convert PDF to Searchable PDF</a>
+      <a href="#" style="margin: auto;" class="bace_title">Convert PDF to Searchable PDF</a>
     </nav>
     <div class="d-flex justify-content-center mt-5 upload_file_box">
       <div class="card upload_box p-3" style="width: 30rem;">
@@ -132,7 +132,8 @@
     
   </p>
     <!-- <button class="btn btn-primary upload_butons" type="submit">Upload</button> -->
-    <button type="submit" class="button upload_butons" onclick="this.classList.toggle('button--loading')">
+    <!-- <button type="submit" class="button upload_butons" onclick="this.classList.toggle('button--loading')"> -->
+    <button type="submit" class="button" onclick="this.classList"> 
       <span class="button__text">Upload</span>
     </button>
     
