--- a/textpdf/templates/searchpdf.html
+++ b/textpdf/templates/searchpdf.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark header">
-        <a href="#" style="margin-left: 600px;" class="bace_title">PDF OCR</a>
+        <a href="#" style="margin: auto;" class="bace_title">PDF OCR</a>
     </nav>
     <div class="d-flex justify-content-center mt-5 upload_file_box">
     <div class="card upload_box p-3" style="width: 30rem;">
